Fixed Center contact icon and heading on mobile screens (#39)
* Fixed Center contact icon and heading on mobile screens

* Removed unnecessary css

* Fixed bug

--- a/css/contact.css
+++ b/css/contact.css
@@ -11,7 +11,6 @@
 .mrn-c-contact-section h5 {
     font-weight: 500;
     font-size: 1.25rem;
-    margin-bottom: 0.5rem;
     color: black;
 }
 
@@ -42,11 +41,19 @@
 /* Contact Icons */
 .mrn-l-contact-icons{
     display:flex;
+    align-items: center;
 }
 
 /* Contact info center */
 @media (max-width: 768px) {
     .mrn-l-contact-col {
         text-align: center;
+    }
+}
+@media (max-width: 768px) {
+    .mrn-l-contact-icons {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
